--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -6,3 +6,8 @@ RUN chmod +x /usr/local/bin/install-php-extensions && \
   install-php-extensions bcmath gd pdo_mysql mysqli zip exif intl @composer
 RUN sed -ri -e 's!AllowOverride None!AllowOverride All!g' /etc/apache2/apache2.conf /etc/apache2/apache2.conf && \
   a2enmod rewrite
+
+ENV APACHE_DOCUMENT_ROOT /var/www/html
+
+RUN sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/sites-available/*.conf && \
+  sed -ri -e 's!/var/www/!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf
