--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -29,6 +29,8 @@ spec:
       initContainers:
         {{- if .Values.appRepo.enabled }}
         - name: git-clone-repository
+          securityContext:
+            {{- toYaml .Values.initSecurityContext | nindent 12 }}
           image: {{ .Values.git.image | quote }}
           imagePullPolicy: {{ .Values.git.pullPolicy | quote }}
           command:
@@ -39,17 +41,19 @@ spec:
               shopt -s dotglob
               [[ -f "/opt/bitnami/scripts/git/entrypoint.sh" ]] && source "/opt/bitnami/scripts/git/entrypoint.sh"
               git clone {{ .Values.appRepo.repository }} --branch {{ .Values.appRepo.branch }} /tmp/repo
-              [[ "$?" -eq 0 ]] && rm -rf /var/www/html/* && mv /tmp/repo/* /var/www/html/
+              [[ "$?" -eq 0 ]] && rm -rf /var/www/* && mv /tmp/repo/* /var/www/
           resources: {{- toYaml .Values.appRepo.resources | nindent 12 }}
           volumeMounts:
             - name: htdocs
-              mountPath: /var/www/html
+              mountPath: /var/www
         {{- end }}
         {{- if .Values.node.enabled }}
         - name: node-build
+          securityContext:
+            {{- toYaml .Values.initSecurityContext | nindent 12 }}
           image: {{ .Values.node.image | quote }}
           imagePullPolicy: {{ .Values.node.pullPolicy | quote }}
-          workingDir: /var/www/html
+          workingDir: /var/www
           command:
             - /bin/bash
             - -ec
@@ -57,13 +61,15 @@ spec:
           resources: {{- toYaml .Values.appRepo.resources | nindent 12 }}
           volumeMounts:
             - name: htdocs
-              mountPath: /var/www/html
+              mountPath: /var/www
         {{- end }}
         {{- if .Values.composer.enabled }}
         - name: composer-install
+          securityContext:
+            {{- toYaml .Values.initSecurityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          workingDir: /var/www/html
+          workingDir: /var/www
           command:
             - /bin/bash
             - -ec
@@ -71,7 +77,7 @@ spec:
           resources: {{- toYaml .Values.appRepo.resources | nindent 12 }}
           volumeMounts:
             - name: htdocs
-              mountPath: /var/www/html
+              mountPath: /var/www
         {{- end }}
       containers:
         {{- if and .Values.appRepo.enabled .Values.appRepo.enableAutoRefresh }}
@@ -84,27 +90,28 @@ spec:
             - |
               [[ -f "/opt/bitnami/scripts/git/entrypoint.sh" ]] && source "/opt/bitnami/scripts/git/entrypoint.sh"
               while true; do
-                  cd /var/www/html && git pull origin {{ .Values.appRepo.branch }}
+                  cd /var/www && git pull origin {{ .Values.appRepo.branch }}
                   sleep {{ .Values.appRepo.interval }}
               done
           resources: {{- toYaml .Values.appRepo.resources | nindent 12 }}
           volumeMounts:
             - name: htdocs
-              mountPath: /var/www/html
+              mountPath: /var/www
         {{- end }}
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          workingDir: /var/www
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
           livenessProbe:
-            httpGet:
-              path: /
+            tcpSocket:
               port: http
+            initialDelaySeconds: 10
           readinessProbe:
             httpGet:
               path: /
@@ -112,7 +119,7 @@ spec:
           env:
             {{- if .Values.mariadb.enabled }}
             - name: DB_HOST
-              value: {{ .Chart.Name }}-mariadb
+              value: {{ .Release.Name }}-mariadb
             - name: DB_DATABASE
               value: {{ .Values.mariadb.auth.database | quote }}
             - name: DB_USERNAME
@@ -122,12 +129,14 @@ spec:
             {{- end }}
             {{- if .Values.redis.enabled }}
             - name: REDIS_HOST
-              value: {{ .Chart.Name }}-redis
+              value: {{ .Release.Name }}-redis
             {{- if .Values.redis.auth.enabled }}
             - name: REDIS_PASSWORD
               value: {{ .Values.redis.auth.password | quote }}
             {{- end }}
             {{- end }}
+            - name: APACHE_DOCUMENT_ROOT
+              value: /var/www/public
             {{- range $key, $value := .Values.app.env }}
             - name: {{ $key }}
               value: {{ $value | quote }}
@@ -141,7 +150,7 @@ spec:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
             - name: htdocs
-              mountPath: /var/www/html
+              mountPath: /var/www
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -155,5 +164,11 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       volumes:
+      {{- if not .Values.app.persistence.enabled }}
         - name: htdocs
           emptyDir: {}
+      {{- else }}
+        - name: htdocs
+          persistentVolumeClaim:
+            claimName: {{ include "laravel-chart.fullname" . }}
+      {{- end }}
